kubernetes/core/reflector/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: reflector
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: reflector
  namespace: reflector
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: reflector-reflector
      app.kubernetes.io/name: reflector
  egress:
    - toEntities:
      - kube-apiserver
